sec2left right edited

--- a/stylecomlogo.css
+++ b/stylecomlogo.css
@@ -197,7 +197,7 @@ color: #505887;
     width: 40vw;
     background-image: url('/images/sectioncontent2/rating.png');
     background-size:80vh;
-    right: 15vw;
+    right: 0;
    
 }
 
