--- a/stylecomlogo.css
+++ b/stylecomlogo.css
@@ -50,18 +50,19 @@
 }
 
 
-.sectionHeading .secHright img{
-  
-   position: relative;
-   top: -9vh;
-}
 .sectionHeading .secHright{
+
     padding: 4vh;
     border:none;
     border-radius: 2rem;
     background-color: #C4C4C4;
     width: 33vw;
-   
+    
+}
+.sectionHeading .secHright img{
+  
+   position: relative;
+   top: -9vh;
 }
 .sectionHeading .secHright p{
   margin-top: 1vh;
@@ -172,7 +173,6 @@ color: #505887;
 .SectionContent2{
     height: 100vh;
     width: 100%;
-    margin-top: 20vh;
     display: grid;
    grid-template-columns: 30vw 30vw;
     /* border: 1px solid; */
@@ -182,6 +182,7 @@ color: #505887;
 }
 
 .SectionContent2 .SC2right{
+
    padding: 8vh 4vh 4vh 4vh;
     /* border: 1px solid; */
   
@@ -211,19 +212,19 @@ color: #505887;
 }
 
 .SectionContent2 .secHright{
-   margin-top: 8vh;
+
+    height: 35vh;
+    width: 25vw;
+    padding: 2vh;
     border:none;
     border-radius: 2rem;
     background-color: #C4C4C4;
-    height: 22vh;
-    width: 25vw;
-    padding: 2vh;
    
 }
 
-.SectionContent2  .secHright img{
+.SectionContent2  .secHright #colon2{
     position: relative;
-    top: -9vh;
+    bottom: 9vh;
  }
 
  .SectionContent2  .secHright h4{
